--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,3 +30,7 @@ dependencies {
     compile 'com.google.firebase:firebase-database:10.0.1'
     testCompile 'junit:junit:4.12'
 }
+
+
+
+apply plugin: 'com.google.gms.google-services'
